# zk-examples

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.hooks/: pre-commit
src/: lib.rs  shift.rs
src/arkworks/: mod.rs
src/bits/: mod.rs
